tests/AdEspresso/FacebookBundle/DependencyInjection/Fixtures/invalid/invalid-graph-version-sdk.php
<?php

return [
    'facebook' => [
        'sdk' => [
            'config' => [
                'app_id' => 'id',
                'app_secret' => 'secret',
                'default_graph_version' => '2.0',
            ],
        ],
        'ads' => [
            'enabled' => false,
        ],
    ],
];
